@@ -16,7 +16,8 @@ class MultiThreadingDemo implements Runnable
     {
         try{
             //Displaying the thread that is running
-            System.out.println("Thread " + Thread.currentThread().getId() + " is running.");
+            //System.out.println("Thread " + Thread.currentThread().getId() + " is running.");
+            System.out.println("Thread " + Thread.currentThread().threadId() + " is running.");
         } catch (Exception e) {
             //Throwing an exception
             System.out.println("Exception is caught");
